--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
             android:value="@string/google_maps_key"/>
 
         <activity
-            android:name=".ui.map.MapActivity"
-            android:label="@string/title_activity_map">
+            android:name=".ui.main.AddressListActivity"
+            android:label="@string/title_activity_address_list">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -39,6 +39,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.map.MapActivity"
+            android:label="@string/title_activity_map">
+        </activity>
     </application>
 
 </manifest>
